# TRexSelector_Examples

./: .clang-format  .clang-tidy  .gitignore  .markdownlint.json  CMakeLists.txt  CMakePresets.json  README.md  mypy.ini  requirements-dev.txt
cpp/: .clangd  CMakeLists.txt  CMakePresets.json  README.md
cpp/applications/: CMakeLists.txt  demo_11_plot_dummy_matrices.cpp  demo_12_biodata.cpp  demo_13_plot_fdr_tpr_results.cpp
cpp/memory_mapping/: CMakeLists.txt  README.md
cpp/memory_mapping/demo_memory_mapping/: README.md  demo_memory_mapping.cpp
cpp/ml_methods/: CMakeLists.txt  README.md
cpp/ml_methods/hac/: HAC_Simulation_Results.md  demo_mlm_hac_01.cpp
cpp/ml_methods/hac_clustering/: README.md  demo_mlm_hac_01.cpp
cpp/ml_methods/hac_clustering/demo_mlm_hac_01/: README.md  demo_mlm_hac_01.cpp
cpp/ml_methods/hac_clustering/demo_mlm_hac_02_mmap/: README.md  demo_mlm_hac_02_mmap.cpp
cpp/ml_methods/model_selection/: README.md  demo_mlm_ms_01_ridge_gcv.cpp  demo_mlm_ms_02_enet_cv_ccd.cpp  demo_mlm_ms_02_ridge_cv.cpp
cpp/ml_methods/model_selection/demo_mlm_ms_01_ridge_cv_svd/: README.md  demo_mlm_ms_01_ridge_cv_svd.cpp
cpp/ml_methods/model_selection/demo_mlm_ms_02_enet_cv_ccd/: README.md  demo_mlm_ms_02_enet_cv_ccd.cpp
cpp/ml_methods/pca/: README.md
cpp/ml_methods/pca/demo_mlm_pca_01/: README.md  demo_mlm_pca_01.cpp
cpp/ml_methods/ridge_regression/: README.md  demo_mlm_ridge_01.cpp
cpp/ml_methods/ridge_regression/demo_mlm_ridge_01/: README.md
cpp/ml_methods/scaler_methods/: README.md  demo_mlm_scaler_01.cpp
cpp/ml_methods/svd/: README.md
cpp/ml_methods/svd/demo_mlm_svd_01/: README.md  (+1 more)
cpp/ml_methods/validation/: CMakeLists.txt  README.md
cpp/trex_selector_methods/: CMakeLists.txt  README.md  demo_table_utils.hpp  reformat_result_txt.py
cpp/trex_selector_methods/trex/: CMakeLists.txt  README.md  demo_trex_01_classic_trex_inmem.cpp  demo_trex_01_single_run.cpp  demo_trex_02_classic_trex_mmap.cpp  demo_trex_02_mc_sim_fixed_support.cpp  demo_trex_03_classic_trex_mmap_mc_sim.cpp  demo_trex_04_mc_sim_lloop_strategies.cpp  demo_trex_05_mmap.cpp  demo_trex_utils.hpp  trex_plt_utils.py  trex_sim_common.hpp  trex_sim_utils.hpp
cpp/trex_selector_methods/trex_da/: CMakeLists.txt  README.md  demo_trex_da_01_ar1.cpp  demo_trex_da_02_equi_and_block_equi.cpp  demo_trex_da_03_nn.cpp  demo_trex_da_03b_mc_sim_nn_ar.cpp  demo_trex_da_03b_nn_ar.cpp  demo_trex_da_04_bt_ar1_block.cpp  demo_trex_da_04_mc_sim_bt_ar1_block.cpp  demo_trex_da_05_ar1_block_sweeps.cpp  demo_trex_da_05_mc_sim_ar1_block_sweeps.cpp  demo_trex_da_06_heavy_tailed_block_sweeps.cpp  demo_trex_da_06_mc_sim_ht_block_sweeps.cpp  demo_trex_da_07_ht_block_white.cpp  demo_trex_da_07_mc_sim_ht_block_white.cpp  demo_trex_da_08_groups.cpp  demo_trex_da_08_mc_sim_groups.cpp  dgp_generators.hpp  trex_da_plt_utils.py  trex_da_sim_common.hpp
cpp/trex_selector_methods/trex_gvs/: CMakeLists.txt  README.md  demo_trex_gvs_01_hastie.cpp  demo_trex_gvs_01_mc_sim_hastie_en_blocks.cpp  demo_trex_gvs_02_mc_sim_scattered_blocks.cpp  demo_trex_gvs_02_scattered.cpp  demo_trex_gvs_03_mc_sim_mixed_blocks.cpp  demo_trex_gvs_03_unequal_blocks.cpp  demo_trex_gvs_04_mc_sim_neg_traps.cpp  demo_trex_gvs_04_mixed_blocks.cpp  demo_trex_gvs_05_mc_sim_equicorr_blocks.cpp  demo_trex_gvs_05_mc_sim_t3_blocks.cpp  demo_trex_gvs_05_random_blocks.cpp  demo_trex_gvs_06_mc_sim_ar1_blocks.cpp  demo_trex_gvs_06_mc_sim_t3_blocks.cpp  demo_trex_gvs_06_neg_corr.cpp  demo_trex_gvs_07_mc_sim_ar1_blocks.cpp  demo_trex_gvs_07_mc_sim_arma_blocks.cpp  demo_trex_gvs_07_neg_traps.cpp  demo_trex_gvs_08_block_bench.cpp  demo_trex_gvs_08_mc_sim_arma_blocks.cpp  demo_trex_gvs_08_mc_sim_block_bench.cpp  demo_trex_gvs_09_equicorr_blocks.cpp  demo_trex_gvs_09_mc_sim_block_bench.cpp  demo_trex_gvs_10_t3_blocks.cpp  demo_trex_gvs_11_ar1_blocks.cpp  demo_trex_gvs_12_arma_blocks.cpp  demo_trex_gvs_13_hapgen.cpp  run_gvs_demos_overnight.sh  sim_trex_gvs_01_hastie.cpp  sim_trex_gvs_02_scattered.cpp  sim_trex_gvs_03_unequal_blocks.cpp  sim_trex_gvs_04_mixed_blocks.cpp  sim_trex_gvs_05_random_blocks.cpp  sim_trex_gvs_06_neg_corr.cpp  sim_trex_gvs_07_neg_traps.cpp  sim_trex_gvs_08_block_bench.cpp  sim_trex_gvs_09_equicorr_blocks.cpp  sim_trex_gvs_10_t3_blocks.cpp  sim_trex_gvs_11_ar1_blocks.cpp  (+6 more)
cpp/trex_selector_methods/trex_screening/: CMakeLists.txt  README.md  demo_trex_scr_01_screen_trex.cpp  demo_trex_scr_02_screen_trex_mmap.cpp  demo_trex_scr_03_screen_trex_correlated.cpp  demo_trex_scr_05_biobank_screen_trex_mmap.cpp  demo_trex_scr_bb_common.hpp  demo_trex_scr_common.hpp  reformat_result_txt.py  run_scr_demos_overnight.sh  trex_scr_plt_utils.py  trex_screening_dgps.hpp  trex_screening_simulation_utils.hpp
cpp/trex_selector_methods/trex_spca/: CMakeLists.txt  README.md  demo_trex_spca_01_mc_sim.cpp  trex_spca_plt_utils.py  trex_spca_sim_utils.hpp
cpp/trex_selector_methods/validation/: CMakeLists.txt  README.md
cpp/tsolvers/: CMakeLists.txt  README.md  demo_ts_01_tlars.cpp  demo_ts_02_tlasso.cpp  demo_ts_03_tstepwise.cpp  demo_ts_04_tenet.cpp  demo_ts_05_tstagewise.cpp  demo_ts_06_tomp.cpp  demo_ts_07_tgp.cpp  demo_ts_08_tacgp.cpp  demo_ts_09_tmp.cpp  demo_ts_10_tncgmp.cpp  demo_ts_11_tools.cpp  demo_ts_12_tafs.cpp
cpp/tsolvers/demo_ts_01_tlars/: README.md
cpp/tsolvers/demo_ts_02_tlasso/: README.md  demo_ts_02_tlasso.cpp
cpp/tsolvers/demo_ts_03_tstepwise/: README.md  demo_ts_03_tstepwise.cpp
cpp/tsolvers/demo_ts_04_tenet/: README.md  demo_ts_04_tenet.cpp
cpp/tsolvers/demo_ts_05_tstagewise/: README.md  demo_ts_05_tstagewise.cpp
cpp/tsolvers/demo_ts_06_tomp/: README.md  demo_ts_06_tomp.cpp
cpp/tsolvers/demo_ts_07_tgp/: README.md  demo_ts_07_tgp.cpp
cpp/tsolvers/demo_ts_08_tacgp/: README.md
cpp/tsolvers/demo_ts_09_tmp/: README.md
cpp/tsolvers/demo_ts_10_tncgmp/: README.md  demo_ts_10_tncgmp.cpp
cpp/tsolvers/demo_ts_11_tools/: README.md
cpp/tsolvers/demo_ts_12_tafs/: README.md
cpp/tsolvers/validation/: CMakeLists.txt  README.md  validation_ts_02_tlars_tlasso_rcompare.cpp
cpp/utils/datageneration/: utils_datagen.hpp  utils_noisegen.hpp
(+1669 files in other folders)
