# src/demos/trex_selector_methods/CMakeLists.txt
# ==================================================================================
# Router: each T-Rex selector variant owns its demo executables.
# ==================================================================================

add_subdirectory(trex)
add_subdirectory(trex_screening)
add_subdirectory(trex_da)
add_subdirectory(trex_gvs)
add_subdirectory(trex_spca)
