# cpp/ml_methods/validation/CMakeLists.txt
# ==================================================================================
# Validation simulations: correctness and invariance checks for ML methods.
# ==================================================================================

add_subdirectory(hac_clustering)
