# src/demos/trex_selector_methods/validation/CMakeLists.txt
# ==================================================================================
# Validation simulations: correctness and invariance checks for T-Rex variants.
# ==================================================================================

add_subdirectory(trex)
add_subdirectory(trex_da)
add_subdirectory(trex_gvs)
add_subdirectory(trex_spca)
